Solved problem 3. Used grouping selector to avoid repition of same css rules. Don't forget to do margin:0 & padding:0 for ul flex container otherwise it might have extra spacing.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -8,11 +8,28 @@ body {
   font-family: Besley, serif;
 }
 
-.header {
+.header{
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  padding:8px;
+  gap:16px;
+  align-items: center;
+  justify-content: space-between;
 }
+
+.left,
+.right {
+  
+  display:flex;
+  gap:16px;
+  align-items: center;
+  
+}
+
+
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +62,10 @@ a {
 
 ul {
   list-style-type: none;
+  display:flex;
+  gap:16px;
+  margin: 0;
+  padding: 0;
 }
+
+
